Swagger fine tune
