# api/out/src/swagger/swagger.json
@@ -11,8 +11,9 @@
         "http"
     ],
     "paths": {
-        "ver/": {
+        "/": {
             "get": {
+                "summary": "Check if api is online",
                 "description": "",
                 "parameters": [],
                 "responses": {
@@ -22,26 +23,36 @@
                 }
             }
         },
-        "ver/users": {
+        "/users": {
             "post": {
+                "summary": "Register new user",
                 "description": "",
                 "parameters": [
                     {
                         "name": "body",
                         "in": "body",
+                        "description": "User",
                         "schema": {
                             "type": "object",
                             "properties": {
                                 "email": {
-                                    "example": "any"
+                                    "type": "string",
+                                    "example": "john@mail.com"
                                 },
                                 "password": {
-                                    "example": "any"
+                                    "type": "string",
+                                    "example": "secret@123"
                                 },
                                 "name": {
-                                    "example": "any"
+                                    "type": "string",
+                                    "example": "Jhon Doe"
                                 }
-                            }
+                            },
+                            "required": [
+                                "email",
+                                "password",
+                                "name"
+                            ]
                         }
                     }
                 ],
@@ -60,8 +71,32 @@
         },
         "/users/login": {
             "post": {
+                "summary": "Login user",
                 "description": "",
-                "parameters": [],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "User",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "email": {
+                                    "type": "string",
+                                    "example": "john@mail.com"
+                                },
+                                "password": {
+                                    "type": "string",
+                                    "example": "secret@123"
+                                }
+                            },
+                            "required": [
+                                "email",
+                                "password"
+                            ]
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -72,23 +107,20 @@
                 }
             }
         },
-        "${ver}/users/whoami": {
+        "/users/whoami": {
             "get": {
+                "summary": "Fetch currently current user",
                 "description": "",
-                "parameters": [
-                    {
-                        "name": "ver",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
+                "parameters": [],
                 "responses": {
                     "200": {
                         "description": "OK"
                     },
                     "401": {
                         "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
